--- a/src/Modulus.UI.Avalonia/Themes/Resources/Colors.axaml
+++ b/src/Modulus.UI.Avalonia/Themes/Resources/Colors.axaml
@@ -36,6 +36,17 @@
     <Color x:Key="SuccessColor">#10B981</Color>
     <Color x:Key="InfoColor">#3B82F6</Color>
     
+    <!-- Accent/Glow Colors (for orbital/neon effects) -->
+    <Color x:Key="AccentPurpleColor">#6366F1</Color>
+    <Color x:Key="AccentVioletColor">#8B5CF6</Color>
+    <Color x:Key="AccentGlowColor">#6366F1</Color>
+    <Color x:Key="ActiveGlowColor">#10B981</Color>
+    
+    <!-- Space Theme Colors (Home page) -->
+    <Color x:Key="SpaceBackgroundColor">#0A0A0F</Color>
+    <Color x:Key="SpaceBackgroundSecondaryColor">#12121A</Color>
+    <Color x:Key="SpaceSurfaceColor">#1E1E28</Color>
+    
     <!-- Navigation Specific -->
     <Color x:Key="NavItemBackgroundColor">Transparent</Color>
     <Color x:Key="NavItemHoverColor">#3D3D3D</Color>
@@ -83,5 +94,27 @@
     
     <SolidColorBrush x:Key="BadgeBackgroundBrush" Color="{StaticResource BadgeBackgroundColor}"/>
     <SolidColorBrush x:Key="BadgeTextBrush" Color="{StaticResource BadgeTextColor}"/>
+    
+    <!-- Accent Brushes -->
+    <SolidColorBrush x:Key="AccentPurpleBrush" Color="{StaticResource AccentPurpleColor}"/>
+    <SolidColorBrush x:Key="AccentVioletBrush" Color="{StaticResource AccentVioletColor}"/>
+    <SolidColorBrush x:Key="AccentGlowBrush" Color="{StaticResource AccentGlowColor}"/>
+    <SolidColorBrush x:Key="ActiveGlowBrush" Color="{StaticResource ActiveGlowColor}"/>
+    <SolidColorBrush x:Key="SuccessBrush" Color="{StaticResource SuccessColor}"/>
+    
+    <!-- Space Theme Brushes -->
+    <SolidColorBrush x:Key="SpaceBackgroundBrush" Color="{StaticResource SpaceBackgroundColor}"/>
+    <SolidColorBrush x:Key="SpaceSurfaceBrush" Color="{StaticResource SpaceSurfaceColor}"/>
+    
+    <!-- Gradient Brushes -->
+    <LinearGradientBrush x:Key="PrimaryGradientBrush" StartPoint="0%,0%" EndPoint="100%,100%">
+        <GradientStop Color="{StaticResource AccentPurpleColor}" Offset="0"/>
+        <GradientStop Color="{StaticResource AccentVioletColor}" Offset="1"/>
+    </LinearGradientBrush>
+    
+    <LinearGradientBrush x:Key="SpaceBackgroundGradientBrush" StartPoint="0%,0%" EndPoint="100%,100%">
+        <GradientStop Color="{StaticResource SpaceBackgroundColor}" Offset="0"/>
+        <GradientStop Color="{StaticResource SpaceBackgroundSecondaryColor}" Offset="1"/>
+    </LinearGradientBrush>
     
 </ResourceDictionary>
